fix styling shadows to be noticeable in dark mode and more consistent in light mode

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -2,7 +2,7 @@
   --background: #ffffff;
   --background-2: #eaeaea;
   --main: #222233;
-  --shadow: #eeeeee;
+  --shadow: #00000055;
 }
 
 html, body {
@@ -19,7 +19,6 @@ body {
   body {
     --background: var(--main);
     --background-2: #44444f;
-    --shadow: #111122;
     --main: var(--background);
   }
 }
@@ -44,7 +43,7 @@ body {
   padding: 10px;
   border-radius: 20px;
   background-color: var(--background);
-  box-shadow: 0 0 10px 2px var(--shadow);
+  box-shadow: 5px 5px 10px 2px var(--shadow);
 }
 
 .login-input {
@@ -53,13 +52,23 @@ body {
   padding: 5px;
   border: none;
   border-radius: 20px;
-  box-shadow: 1px 1px 5px 1px var(--shadow);
+  box-shadow: inset var(--shadow) 2px 2px 2px;
   background-color: var(--background-2);
+}
+
+.login-input#submit {
+  box-shadow: inset var(--shadow) -2px -2px 5px 1px; 
 }
 
 .login-label {
   margin-left: 20px;
   margin-top: 10px;
   font-size: 15px;
+}
+
+nav {
+  background-color: var(--background);
+  box-shadow: var(--shadow) 0 0 30px;
+  padding: 15px;
 }
 
